Had issue with vertical centre alignment of grid items - resolved via CSS

--- a/take-a-bao-frontend/src/styles/BaoziCard.css
+++ b/take-a-bao-frontend/src/styles/BaoziCard.css
@@ -1,11 +1,10 @@
-.col {
-    width: 450px;
-    height: 100%;
-}
-
 .item-description,
 .item-price {
     margin: 15px;
+}
+
+.item-description {
+    text-align: left;
 }
 
 .item-price {
